<resources>
    <string name="app_name">GPS_OSM_Fragment</string>
    <string name="action_settings">Settings</string>

    <!--menu navigation drawer-->
    <string name="direction">Direction</string>
    <string name="chat">Chat</string>

    <!--face-->
    <string name="facebook_app_id">1538626913099458</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fetch address-->
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <!--bottom bar-->
    <string name="start_point">Choosing starting point</string>
    <string name="des_point">Choosing ending point</string>
    <string name="yourLocation">Your location</string>
    <string name="track">Tracking</string>
    <string name="galery">Saved Trip</string>
    <string name="english">English</string>
    <string name="vietnam">Vietnamese</string>

    <!--dialog fragment-->
    <string name="choose_action">Choose Action</string>
    <string-array
        name="pick_action">
        <item>Set as destination</item>
    </string-array>
    <string-array
        name="pick_action_with_start">
        <item>Set as starting point</item>
        <item>Set as destination</item>
    </string-array>
</resources>

