<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_map_black_24dp"
            android:title="Map">
            <menu>
                <item
                    android:id="@+id/direction"
                    android:icon="@drawable/ic_directions_car_black_24dp"
                    android:title="@string/direction"/>
                <item
                    android:id="@+id/chat"
                    android:icon="@drawable/ic_face_black_24dp"
                    android:title="@string/chat"/>
                <item
                    android:id="@+id/nav_tracking"
                    android:icon="@drawable/ic_my_location_black_24dp"
                    android:title="@string/track"/>
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_perm_media_black_24dp"
                    android:title="@string/galery"/>
            </menu>
        </item>

        <item
            android:title="Language"
            android:icon="@drawable/ic_language_black_24dp">
            <menu>
                <item
                    android:icon="@drawable/ic_language_black_24dp"
                    android:id="@+id/speak_en"
                    android:title="@string/english"/>
                <item
                    android:icon="@drawable/ic_language_black_24dp"
                    android:id="@+id/speak_vi"
                    android:title="@string/vietnam"/>
            </menu>
        </item>
    </group>

    <!--<group android:checkableBehavior="single">-->

    <!--</group>-->

</menu>
